--- a/Project.toml
+++ b/Project.toml
@@ -30,6 +30,7 @@ PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 Query = "1a8c2f83-1ff3-5112-b086-8aa67b057ba1"
 ScikitLearn = "3646fa90-6ef7-5e7e-9f22-8aca16db6324"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 VegaDatasets = "0ae4a718-28b7-58ec-9efb-cded64d6d5b4"
 VegaLite = "112f6efa-9a02-5b7d-90c0-432ed331239a"
