apdat methods and resolve problems

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,7 @@
 {
+    "editor.defaultFormatter": "julialang.language-julia",
+    "editor.tabCompletion": "on",
+    "julia.useProgressFrontend": true,
+    "julia.lint.call": false,
+    
 }
