--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "editor.tabCompletion": "on",
     "julia.useProgressFrontend": true,
     "julia.lint.call": false,
+    "julia.completionmode": "exportedonly",
     
 }
