--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+AMDGPU = "21141c5a-9bdb-4563-92ae-f87d6854732e"
 BlackBoxOptim = "a134a8b2-14d6-55f6-9291-3336d3ab0209"
 CPLEX = "a076750e-1247-5638-91d2-ce28b192dca0"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -21,6 +22,7 @@ Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
+Match = "7eb4fadd-790c-5f42-8a69-bfa0b872bfbf"
 MultiJuMP = "f6097e2c-3ba3-5605-a9a8-3a277acb490f"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
