--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 AMDGPU = "21141c5a-9bdb-4563-92ae-f87d6854732e"
+AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 BlackBoxOptim = "a134a8b2-14d6-55f6-9291-3336d3ab0209"
 CPLEX = "a076750e-1247-5638-91d2-ce28b192dca0"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -8,6 +9,7 @@ Clp = "e2554f3b-3117-50c0-817c-e040a3ddf72d"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DecisionTree = "7806a523-6efd-50cb-b5f6-3fa6f1930dbb"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
